pkg/ibmvpc/examples/out/explain_out/NACLExternal2_all_vpcs_explain_detail.txt
Explaining connectivity from vsi1-ky to 100.128.0.0/32 within test-vpc1-ky
Interpreted source: vsi1-ky[10.240.10.4]
Interpreted destination: 100.128.0.0/32 (external)
==========================================================================

No connections from vsi1-ky[10.240.10.4] to Public Internet 100.128.0.0/32;
connection is blocked by egress

External traffic via PublicGateway: public-gw-ky
Egress: security group sg1-ky allows connection; network ACL acl1-ky blocks connection

Path:
	vsi1-ky[10.240.10.4] -> security group sg1-ky -> | network ACL acl1-ky |


Details:
~~~~~~~~
Path is disabled; The relevant rules are:
	Egress:
		security group sg1-ky allows connection with the following allow rules
			index: 0, direction: outbound,  conns: protocol: all, remote: 0.0.0.0/0, local: 0.0.0.0/0
		network ACL acl1-ky has no relevant allow rules

------------------------------------------------------------------------------------------------------------------------
